--- a/css/style.css
+++ b/css/style.css
@@ -553,7 +553,7 @@ a.rslides_nav.rslides1_nav.next {
 }
 
 ul#slider li:nth-child(1) {
-    background: url(../images/2/banner1.jpg)no-repeat 0px 0px;
+    background: url(https://i1.wp.com/deyoucheng.com/images/2/banner1.jpg)no-repeat 0px 0px;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -563,7 +563,7 @@ ul#slider li:nth-child(1) {
 }
 
 ul#slider li:nth-child(2) {
-    background: url(../images/2/banner2.jpg)no-repeat 0px 0px;
+    background: url(https://i1.wp.com/deyoucheng.com/images/2/banner2.jpg)no-repeat 0px 0px;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -573,7 +573,7 @@ ul#slider li:nth-child(2) {
 }
 
 ul#slider li:nth-child(3) {
-    background: url(../images/2/banner3.jpg)no-repeat 0px 0px;
+    background: url(https://i1.wp.com/deyoucheng.com/images/2/banner3.jpg)no-repeat 0px 0px;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -583,7 +583,7 @@ ul#slider li:nth-child(3) {
 }
 
 ul#slider li:nth-child(4) {
-    background: url(../images/2/banner4.jpg)no-repeat 0px 0px;
+    background: url(https://i1.wp.com/deyoucheng.com/images/2/banner4.jpg)no-repeat 0px 0px;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -981,7 +981,7 @@ h3.agile_tittle span {
 /*-- //about --*/
 
 .mid-one {
-    background: url(../images/2/jjzs2.jpg)no-repeat 0px 0px;
+    background: url(https://i1.wp.com/deyoucheng.com/images/2/jjzs2.jpg)no-repeat 0px 0px;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -991,7 +991,7 @@ h3.agile_tittle span {
 }
 
 .mid-two {
-    background: url(../images/2/jjzs1.jpg)no-repeat 0px 0px;
+    background: url(https://i1.wp.com/deyoucheng.com/images/2/jjzs1.jpg)no-repeat 0px 0px;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
