--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,6 @@ a.w3l_header_contact_details_agile-info_inner,
     /* z-index: 99;  */
     text-align: center;
     padding: 0em 3em;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 
@@ -264,7 +263,7 @@ a.w3l_header_contact_details_agile-info_inner,
 
 nav.navbar.navbar-default {
     background: none;
-    padding: 1em 0 0em 0;
+    padding: 0.3em 0 0 0;
 }
 
 .navbar-default .navbar-nav>.open>a,
@@ -838,8 +837,8 @@ h3.w3l_header.w3_agileits_header.two {
 }
 
 .w3l_header span {
-    color: #000;
-    font-weight: 500;
+    color: #777;
+    font-weight: 400;
 }
 
 h3.w3l_header.w3_agileits_header.two span {
@@ -936,13 +935,14 @@ h3.agile_tittle span {
 }
 
 .main_section_agile.inner {
-    background: url(../images/banner2.jpg)no-repeat 0px 0px;
+    /* background: url(../images/banner2.jpg)no-repeat 0px 0px; */
+	background-color: #fff;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     -ms-background-size: cover;
-    min-height: 350px;
+    min-height: 80px;
 }
 
 
@@ -2479,7 +2479,7 @@ ul.con_inner_text.midimg li {
 
 .services-breadcrumb {
     padding: 1em 0;
-    background: #f5f5f5;
+    background: #3c3b3f;
     text-align: center;
 }
 
@@ -2488,15 +2488,15 @@ ul.con_inner_text.midimg li {
 }
 
 ul.w3_short {
-    text-align: left;
+    text-align: center;
 }
 
 .agile_inner_breadcrumb {
-    padding: 0 4em;
+    padding: 0 1em;
 }
 
 ul.w3_short li a {
-    color: #00b7f1;
+    color: #fff;
     text-decoration: none;
 }
 
@@ -2520,10 +2520,12 @@ ul.w3_short li a {
 ul.w3_short li {
     display: inline-block;
     text-transform: uppercase;
-    color: #030408;
-    font-size: 0.9em;
+    color: #999;
+    font-size: 1em;
     font-weight: 500;
     letter-spacing: 2px;
+	height: 2em;
+	line-height: 2em;
 }
 
 .medile_agile_its_blue h4 {
@@ -2745,7 +2747,7 @@ ul.w3_short li {
         left: 28%;
     }
     .main_section_agile.inner {
-        min-height: 250px;
+        min-height: 80px;
     }
 }
 
@@ -3217,7 +3219,7 @@ ul.w3_short li {
         font-size: 1.4em;
     }
     .main_section_agile.inner {
-        min-height: 230px;
+        min-height: 75px;
     }
     .skills,
     .contact_img_agile {
@@ -3266,7 +3268,7 @@ ul.w3_short li {
         width: 100%;
     }
     .main_section_agile.inner {
-        min-height: 201px;
+        min-height: 70px;
     }
     .portfolio-grids {
         padding: 0;
@@ -3534,7 +3536,7 @@ ul.w3_short li {
         left: 25%;
     }
     .main_section_agile.inner {
-        min-height: 148px;
+        min-height: 56px;
     }
 }
 
@@ -3566,7 +3568,7 @@ ul.w3_short li {
         margin-top: 1em;
     }
     .w3l_header {
-        font-size: 2em;
+        font-size: 1.5em;
     }
     .agileits_banner_bottom_left {
         padding: 0;
