--- a/css/style.css
+++ b/css/style.css
@@ -2857,6 +2857,7 @@ ul.w3_short li {
     }
     .about_agileinfo {
         padding-left: 0;
+		padding-right: 0;
     }
     .mid-inner-info {
         margin-top: 2em;
