--- a/css/style.css
+++ b/css/style.css
@@ -949,7 +949,7 @@ h3.agile_tittle span {
 /*-- //about --*/
 
 .mid-one {
-    background: url(../images/2/jjzs2.jpg)no-repeat 0px 0px;
+    background: url(https://i1.wp.com/deyoucheng.com/images/2/jjzs3.jpg)no-repeat 0px 0px;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -959,7 +959,7 @@ h3.agile_tittle span {
 }
 
 .mid-two {
-    background: url(../images/2/jjzs1.jpg)no-repeat 0px 0px;
+    background: url(https://i1.wp.com/deyoucheng.com/images/2/jjzs4.jpg)no-repeat 0px 0px;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -2873,6 +2873,7 @@ ul.w3_short li {
     }
     .mid-one,
     .mid-two {
+		background-position:50% 50%;
         min-height: 300px;
         float: none;
         width: 100%;
