--- a/css/style.css
+++ b/css/style.css
@@ -877,7 +877,7 @@ h3.agile_tittle span {
     font-size: 1em;
     letter-spacing: 1px;
     background: none;
-    border: 1px solid #fff;
+    border: 1px solid #999;
     border-radius: 0;
     margin-top: 1.5em;
     font-weight: 700;
